# valrs

./: .gitignore  Cargo.toml  LICENSE  README.md
apps/docs/: .gitignore  next.config.mjs  package.json  source.config.ts  tailwind.config.ts  wrangler.jsonc
apps/docs/app/: globals.css  layout.config.tsx  layout.tsx  not-found.tsx  page.tsx
apps/docs/components/: nf-icon.tsx  valrs-logo.tsx
apps/docs/content/docs/: collections.mdx  custom-schemas.mdx  getting-started.mdx  index.mdx  json-schema.mdx  meta.json  objects.mdx  primitives.mdx  standard-schema.mdx  streaming.mdx  unions.mdx
apps/docs/content/docs/api/: index.mdx  meta.json  types.mdx
apps/docs/lib/: orange-dark-theme.ts
crates/standard-schema/: Cargo.toml
crates/standard-schema-derive/: Cargo.toml
crates/standard-schema-derive/src/: lib.rs
crates/standard-schema-json/: Cargo.toml
crates/standard-schema-json/src/: lib.rs
crates/standard-schema-wasm/: Cargo.toml
crates/standard-schema-wasm/src/: lib.rs
crates/standard-schema/src/: lib.rs  traits.rs
crates/standard-schema/src/validators/: mod.rs  number.rs  option.rs  string.rs
crates/valrs/: Cargo.toml
crates/valrs-derive/: Cargo.toml
crates/valrs-derive/src/: lib.rs
crates/valrs-json/: Cargo.toml
crates/valrs-json/src/: lib.rs
crates/valrs-wasm/: Cargo.toml
crates/valrs-wasm/src/: lib.rs
crates/valrs/src/: lib.rs  traits.rs  types.rs
crates/valrs/src/validators/: mod.rs  number.rs  option.rs  string.rs
examples/: derive_example.rs
examples/benchmark/: README.md  benchmark.ts  browser-benchmark.html  package.json  tsconfig.json
examples/comprehensive/: main.rs
examples/streaming/: README.md  index.ts  package.json  tsconfig.json
examples/web/: index.html
