[workspace]
resolver = "2"
members = [
    "crates/standard-schema",
    "crates/standard-schema-derive",
    "crates/standard-schema-json",
    "crates/standard-schema-wasm",
]

# Root package for examples
[package]
name = "standard-schema-workspace"
version = "0.1.0"
edition = "2024"
publish = false

[[example]]
name = "derive_example"
path = "examples/derive_example.rs"

[[example]]
name = "comprehensive"
path = "examples/comprehensive/main.rs"

[dependencies]
standard-schema = { path = "crates/standard-schema" }
standard-schema-derive = { path = "crates/standard-schema-derive" }
standard-schema-json = { path = "crates/standard-schema-json" }
serde_json = "1.0"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/standard-schema/standard-schema-rs"
authors = ["Standard Schema Contributors"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Proc macro dependencies
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# WASM dependencies
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
