[workspace]
resolver = "2"
members = [
    "crates/valrs",
    "crates/valrs-derive",
    "crates/valrs-json",
    "crates/valrs-wasm",
]

# Root package for examples
[package]
name = "valrs-workspace"
version = "0.1.0"
edition = "2024"
publish = false

[[example]]
name = "derive_example"
path = "examples/derive_example.rs"

[[example]]
name = "comprehensive"
path = "examples/comprehensive/main.rs"

[dependencies]
valrs = { path = "crates/valrs" }
valrs-derive = { path = "crates/valrs-derive" }
valrs-json = { path = "crates/valrs-json" }
serde_json = "1.0"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/douglance/valrs"
authors = ["Standard Schema Contributors"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Proc macro dependencies
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# WASM dependencies
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
