[package]
name = "standard-schema-json"
description = "JSON Schema generation for Standard Schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
standard-schema = { path = "../standard-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
