[package]
name = "valrs-json"
description = "JSON Schema generation for Standard Schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
valrs = { path = "../valrs" }
serde = { workspace = true }
serde_json = { workspace = true }
